--- a/test_game/public/index.html
+++ b/test_game/public/index.html
@@ -21,6 +21,9 @@
         <div id="lobby" style="display:none;">
             <h1>Lobby Room: <span id="currentRoom"></span></h1>
             <div id="lobbyPlayers"></div>
+
+            <!-- Button to start Tic-Tac-Toe -->
+            <button id="startTicTacToe" style="display:none;">Start Tic-Tac-Toe</button>
         </div>
         <div id="response"></div>
     </div>
